# whill_ctrl

./: .gitignore  .pre-commit-config.yaml  README.md  controller.tosc  install.sh  mosquitto.conf  pyproject.toml  receiver.toe  repomix-output.txt
src/whill_ctrl/: __init__.py  __main__.py  config.py  utils.py
src/whill_ctrl/controller/: __init__.py  controller.py
src/whill_ctrl/core/: __init__.py  app.py
src/whill_ctrl/mqtt/: __init__.py  client.py
src/whill_ctrl/osc/: __init__.py  server.py
src/whill_ctrl/utils/: __init__.py  logger.py
src/whill_ctrl/whill/: factory.py  interface.py  mock.py  real.py
web/: whill_controller.html
