[project]
name = "whill_ctrl"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "eotel", email = "49769982+Eotel@users.noreply.github.com" },
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = ["asyncclick>=8.1.8", "python-osc>=1.9.3", "whill>=1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
whill_ctrl = "whill_ctrl.__main__:main"

[tool.ruff]
exclude = [
  ".git",
  "__pycache__",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff",
  ".vscode",
  "build",
  "dist",
  "env",
  ".env",
  "node_modules",
  "venv",
  ".venv",
]

line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["B008"]
exclude = ["migrations"]

fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
#"**/migrations/*.py" = ["F401"]
"__init__.py" = ["E402", "D104", "F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
case-sensitive = true
split-on-trailing-comma = true
combine-as-imports = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
